@@ -195,37 +195,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
        http://svn.apache.org/viewvc?view=rev&revision=429879
        +1: niq, rpluem
 
-    * proxy/ajp_header.c: incorrect substring checks for header fields
-      The method of parsing the header line tokens is flakey:
-      it uses memcmp() to check, e.g., whether the header token is
-      "Accept-Charset:", by uppercasing the token name (-> "ACCEPT-CHARSET"),
-      then compares the initial "ACCEPT-" prefix, and then tests:
-        if (memcmp(p, "CHARSET", 7) == 0) return SC_ACCEPT_CHARSET;
-      but does not verify that the end of the token has been reached.
-      Thus, a header
-        Accept-CharsetXXX-Blah: utf-8
-      would be mistaken for an "Accept-Charset: utf-8".
-      Same goes for a couple of other header names.
-      The patch replaces the memcmp by a strcmp to check for the trailing
-      NIL character, too.
-      Message-ID: <20070830105540.GA67279@deejai2.mch.fsc.net>
-      Trunk version of patch:
-        http://svn.apache.org/viewvc?rev=571219&view=rev
-      +1: jim, rpluem
-      +1: martin, with the exception of the "Content-Type" patch
-          which has been superseded with the patch following below
-	  (http://svn.apache.org/viewvc?rev=571232&view=rev).
-
-    * proxy/ajp_header.c: case sensitive comparison of literal "Content-Type"
-      IMO, and to be on the defensive side, I would replace
-        if (memcmp(stringname, "Content-Type", 12) == 0) {
-      by
-        if (strcasecmp(stringname, "Content-Type") == 0) {
-      as well. (that was not handled in the patch above)
-      Trunk version of patch:
-        http://svn.apache.org/viewvc?rev=571232&view=rev
-      +1: jim,martin,rpluem
-
 
 PATCHES/ISSUES THAT ARE STALLED
 
